ViTables ChangeLog
==================
** September 29, 2013 **
The module dataSheet has been renamed accordingly to PEP 8.

The module scrollBar has been renamed accordingly to PEP 8.

The module leafView has been renamed accordingly to PEP 8.

** September 28, 2013 **
The package vtWidgets has been renamed accordingly to PEP 8.

The package vtTables has been renamed accordingly to PEP 8.

The package nodeProperties has been renamed accordingly to PEP 8.

The package docBrowser has been renamed accordingly to PEP 8.

The module zoomCell has been renamed accordingly to PEP 8.

The module inputNodeName has been renamed accordingly to PEP 8.

** September 20, 2013 **
data presentation of EArray has been debugged and simplified.

** September 16, 2013 **
Fixed a bug in the cut node operation.

The example scripts have been migrated to PyTables3 syntax with pt2to3.

** September 03, 2013 **
Bug #22 has been fixed.

Some minor mistakes have been fixed in the Users' Guide.

** February 10, 2013 **
The Import from CSV plugin uses the plugin utilities module now.

Fixed a bug in the Export to CSV plugin.

The plugin utilities module has been updated.

** February 07, 2013 **
Time series plugin support for soft/external links has been fixed.

** February 06, 2013 **
<Thanks To> tab of the About ViTables dialog has been updated.

Pandas time series support added to time series plugin.

In addition, the plugin has been simplified and refactored.

** February 01, 2013 **
The shebang/encoding lines of all modules have been updated.

The change ensure consistency with scripts/vitables launcher module.

** January 30, 2013 **
The processing of command-line arguments has been upgraded.

The deprecated optparse module has been replaced with the argparse module.

** January 28, 2013 **
A selected cell rendering bug has been fixed.

** January 24, 2013 **
The license of plugins and some example scripts has been updated.

Some more copyright notices have been updated.
