@@ -7,6 +7,8 @@ The module scrollBar has been renamed accordingly to PEP 8.
 
 The module leafView has been renamed accordingly to PEP 8.
 
+The module leafModel has been renamed accordingly to PEP 8.
+
 ** September 28, 2013 **
 The package vtWidgets has been renamed accordingly to PEP 8.
 
